# genshin-dialogue-autoskip

./: .env  .gitignore  LICENSE  README.md  autoskip_dialogue.py  do zrobienia.txt  install.bat  listener_tests without on_release.py  listener_tests.py  pyproject.toml  random_tests.py  readme.txt  requirements.txt  run.bat  simple_clicker_tests.py  write keystrokes to file.py
Testing/: Log.txt  autowish.py  old exit_program().py  pixel_color_recognition.py  random_tests.py
