[tool.poetry]
name = "genshin-dialogue-autoskip"
version = "0.1.0"
description = ""
authors = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "0.9.54"
pynput = "1.7.6"
python-dotenv = "1.0.0"
pyscreeze = "0.1.28"
pypiwin32 = "223"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
